--- a/app/components/content/content.css
+++ b/app/components/content/content.css
@@ -77,6 +77,7 @@
     background: #f8f8f8;
     border-radius: 3px;
     font-size: 13px;
+    white-space: pre-wrap;
 }
 .content img {
     margin: 15px 0;
@@ -107,6 +108,12 @@
 }
 .frontPage .hero h1 {
     font-size: 80px;
+}
+:global(.list-with-checkbox) {
+    list-style: none;
+    list-style-position: inside;
+    text-indent: -1.3em;
+    padding-left: 1.2em;
 }
 @media (max-width: 480px) {
     .content img {
