--- a/app/components/sidebar/sidebar.css
+++ b/app/components/sidebar/sidebar.css
@@ -43,6 +43,7 @@
     margin-top: -13px;
     padding: 10px;
     color: #95C2C1;
+    text-transform: none;
 }
 .opened .mainCategoryTitle:after {
     content: "b";
