--- a/app/pages/doc/doc.css
+++ b/app/pages/doc/doc.css
@@ -176,6 +176,5 @@
         top: 0;
         left: 0;
         padding: 21px 20px;
-        background: #21d2cc;
     }
 }
